--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "http-status-codes": "^2.2.0",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mysql": "^2.18.1"
   }
