--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http-status-codes": "^2.2.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
   }
 }
